--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
     <script src="../src/ui/chapter-select.js"></script>
     <script src="../src/ui/sub-chapter-select.js"></script>
     <!--Import chapters-->
+    <script src="../src/chapters/shared/utils.js"></script>
     <script src="../src/chapters/shared/build-chapter.js"></script>
     <script src="../src/chapters/introduction/introduction.js"></script>
     <script src="../src/chapters/one/chapter-one.js"></script>
