change code to modules

--- a/public/index.html
+++ b/public/index.html
@@ -38,18 +38,18 @@
       //]]>
     </script>
     <!--utilities-->
-    <script src="../src/constants/chapters.js"></script>
+    <!-- <script src="../src/constants/chapters.js"></script> -->
     <!--chapter manager-->
-    <script src="../src/chapter-manager/chapter-manager.js"></script>
+    <!-- <script src="../src/chapter-manager/chapter-manager.js"></script> -->
     <!--ui-->
-    <script src="../src/ui/description.js"></script>
-    <script src="../src/ui/chapter-select.js"></script>
-    <script src="../src/ui/sub-chapter-select.js"></script>
+    <script src="../src/ui/description.js" type="module"></script>
+    <script src="../src/ui/chapter-select.js" type="module"></script>
+    <script src="../src/ui/sub-chapter-select.js" type="module"></script>
     <!--Import chapters-->
-    <script src="../src/chapters/shared/utils.js"></script>
-    <script src="../src/chapters/shared/build-chapter.js"></script>
-    <script src="../src/chapters/introduction/introduction.js"></script>
-    <script src="../src/chapters/one/chapter-one.js"></script>
-    <script src="../src/sketch.js"></script>
+    <!-- <script src="../src/chapters/shared/utils.js"></script>
+    <script src="../src/chapters/shared/build-chapter.js"></script> -->
+    <script src="../src/chapters/introduction/introduction.js" type="module"></script>
+    <script src="../src/chapters/one/chapter-one.js" type="module"></script>
+    <script src="../src/sketch.js" type="module"></script>
   </body>
 </html>
