add attractor simulations

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,8 @@
     <script src="../src/chapters/shared/build-chapter.js"></script> -->
     <script src="../src/chapters/introduction/introduction.js" type="module"></script>
     <script src="../src/chapters/one/chapter-one.js" type="module"></script>
+    <script src="../src/chapters/two/chapter-two.js" type="module"></script>
+
     <script src="../src/sketch.js" type="module"></script>
   </body>
 </html>
